add store; render list with template

--- a/index.html
+++ b/index.html
@@ -13,26 +13,12 @@
 
   <section class="bookmark-controls"></section>
   <section class="bookmarks-list">
-    <ul class="bookmarks">
-      <li class="bookmark-item">
-        <header>
-          <span class="header-text">Article on Cats</span>
-        </header>
-        <article>
-          <p class="description">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium omnis reprehenderit beatae soluta sapiente optio repellat nulla ipsam, architecto harum in consectetur suscipit unde delectus atque. Ex a soluta eveniet?
-            <span class="site-link">Visit Site</span>
-          </p>
-        </article>
-        <div class="rating">
-          <span>&#x2606</span><span>&#x2606</span><span>&#x2606</span><span>&#x2606</span><span>&#x2606</span>
-        </div>
-      </li>
-    </ul>
+    <ul class="bookmarks"></ul>
   </section>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="scripts/templates.js"></script>
+  <script src="scripts/store.js"></script>
   <script src="scripts/index.js"></script>
 </body>
 </html>
